public enum MedioTransporte {
    PIE,
    CABALLO,
    BOTE,
    ALFOMBRA_VOLADORA
}